logs/microblog.log
2022-11-13 14:14:19,660 ERROR: Exception on /login [GET] [in /home/vlasov/Yandex.Disk/myprojects/microblog/.venv/lib/python3.11/site-packages/flask/app.py:1741]
Traceback (most recent call last):
  File "/home/vlasov/Yandex.Disk/myprojects/microblog/.venv/lib/python3.11/site-packages/flask/app.py", line 2525, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/vlasov/Yandex.Disk/myprojects/microblog/.venv/lib/python3.11/site-packages/flask/app.py", line 1822, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/vlasov/Yandex.Disk/myprojects/microblog/.venv/lib/python3.11/site-packages/flask/app.py", line 1820, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/vlasov/Yandex.Disk/myprojects/microblog/.venv/lib/python3.11/site-packages/flask/app.py", line 1796, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/vlasov/Yandex.Disk/myprojects/microblog/app/routes.py", line 94, in login
    return render_template('login.html', title='Sign In',form=form)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/vlasov/Yandex.Disk/myprojects/microblog/.venv/lib/python3.11/site-packages/flask/templating.py", line 147, in render_template
    return _render(app, template, context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/vlasov/Yandex.Disk/myprojects/microblog/.venv/lib/python3.11/site-packages/flask/templating.py", line 130, in _render
    rv = template.render(context)
         ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/vlasov/Yandex.Disk/myprojects/microblog/.venv/lib/python3.11/site-packages/jinja2/environment.py", line 1301, in render
    self.environment.handle_exception()
  File "/home/vlasov/Yandex.Disk/myprojects/microblog/.venv/lib/python3.11/site-packages/jinja2/environment.py", line 936, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "/home/vlasov/Yandex.Disk/myprojects/microblog/app/templates/login.html", line 1, in top-level template code
    {% extends "base.html" %}
  File "/home/vlasov/Yandex.Disk/myprojects/microblog/.venv/lib/python3.11/site-packages/jinja2/environment.py", line 936, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "/home/vlasov/Yandex.Disk/myprojects/microblog/app/templates/base.html", line 11, in template
    {% bloc navbar %}
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'bloc'.
2022-11-13 14:14:45,160 INFO: Microblog startup [in /home/vlasov/Yandex.Disk/myprojects/microblog/app/__init__.py:52]
2022-11-13 14:15:18,706 INFO: Microblog startup [in /home/vlasov/Yandex.Disk/myprojects/microblog/app/__init__.py:52]
2022-11-13 14:16:22,304 INFO: Microblog startup [in /home/vlasov/Yandex.Disk/myprojects/microblog/app/__init__.py:52]
2022-11-13 14:32:31,710 INFO: Microblog startup [in /home/vlasov/Yandex.Disk/myprojects/microblog/app/__init__.py:52]
2022-11-13 14:42:33,390 INFO: Microblog startup [in /home/vlasov/Yandex.Disk/myprojects/microblog/app/__init__.py:52]
2022-11-13 14:42:53,166 INFO: Microblog startup [in /home/vlasov/Yandex.Disk/myprojects/microblog/app/__init__.py:52]
